--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
      display: flex;
      justify-content: space-between;
      margin: 10%;
-     color: #fff;
+     color: #776767;
    }
    
    
