--- a/style3.css
+++ b/style3.css
@@ -25,7 +25,7 @@ body {
 .menu-item a {
   text-decoration: none;
   color: #fff;
-  background-color: #b8969687;
+  background-color: #FCFCFC;
   font-size: 200%
 }
 
@@ -39,7 +39,7 @@ h3 {
   max-width: 30%;
   margin-left: 7.5%;
   margin-top: 10%;
-  background-color: #b8969687; 
+  background-color: #FCFCFC; 
   color: white; 
   padding: 2px; 
 }
