--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ body {
      text-decoration: none;
    }
    
+   a {
+    text-decoration: none;
+    color: #fff;
+   }
    
    .main {
      max-width: 500px;
